--- a/babylonProj/Element02/src/main.css
+++ b/babylonProj/Element02/src/main.css
@@ -1,16 +1,12 @@
-body, html {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  canvas {
-    width: 100%;
-    height: 100%;
-    touch-action: none;
-  }
+body {
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+#renderCanvas {
+  width: 100%;
+  height: 100%;
+}
